@@ -133,7 +133,7 @@ Often a clean up or similar is used as shown in the situation above - but in thi
 
 
 \section{Regular Expression}
-Regular expressions are an universal and powerful tool to deal with string operations like \emph{seach for}. Here's a compact example how to use regular expressions to check whether or not a string is a substring of another one:
+Regular expressions\footnote{At \url{http://www.regular-expressions.info/} are some good regular expression tutorials online available, as well as a basic syntax reference at \url{http://www.regular-expressions.info/reference.html}} are an universal and powerful tool to deal with string operations like \emph{seach for}. Here's a compact example how to use regular expressions to check whether or not a string is a substring of another one:
 
 \begin{lstlisting}[caption=Regular expression example]
   String sBeer = "BeerNumber99";
